2003-02-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXHLEvents.c: fixed conversion of apple event
	parameters to posix style path names.
	[Bug #621672] (steffen, Benjamin Riefenstahl) 

	* macosx/tkMacOSXDialog.c: 
	* macosx/tkMacOSXWm.c:
	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/tkMacOSXUtil.c (removed):
	* macosx/tkMacOSXUtil.h (removed): removed all references to
	tkMacOSXUtil.{c,h}, made obsolete by the patch above. [Bug #621672]
	
2003-02-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (CreateClosestFont, CanUseFallback): use the
	first best font match in user font path. [Bug #647497] (dal zotto)

	* generic/tkListbox.c (ListboxSelectionSubCmd): 
	* tests/listbox.test: Allow 'selection includes' to respond when
	disabled (but only 'includes'). [Bug #632514]

	* unix/tkUnixButton.c (TkpDisplayButton): Correct visual display
	of disabled check/radiobutton to be more distinctive on unix.
	* tests/unixButton.test: [Bug #669595] (hintermayer)

	* doc/panedwindow.n: clarified the need to use 'update idle' when
	adding unmapped windows.  Needs further examination. [Bug #605105]

	* generic/tkEntry.c (SpinboxWidgetObjCmd, EntryWidgetObjCmd):
	* tests/entry.test:   return 1 if selection is present even if
	* tests/spinbox.test: entry/spinbox is disabled, as selection get
	will still return the selection (although selection still ignore
	modify requests when entry/spinbox is disabled). [Bug #637828]

2003-02-24  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* tkMacOSXDialog.c (NavServicesGetFile): Fix bug with
	kNavCtlSetSelection - control data should be a pointer
	not a handle.
	
2003-02-21  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/clrpick.tcl (color::BuildDialog): 
	* library/msgbox.tcl (MessageBox): Yet more places that did
	complex and fragile width calculations instead of using grid,
	though with these it is the -uniform option that saves the day.
